Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/6910550/T6910550c.out
T6910550c.java:12:10: compiler.err.array.and.varargs: m(java.lang.Object...), m(java.lang.Object[]), T6910550c
1 error
